--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ img {
     opacity: 1;
     padding: 10px 20px;
     border-radius: 30px; /* Pill shape */
-    background-color: rgba(255, 255, 255, 0.1); /* Fond très subtil */
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(0,0,0,0.1));
     backdrop-filter: blur(5px);
     transition: top 0.3s ease-out, background-color 0.3s ease-out, box-shadow 0.3s ease-out, padding 0.3s ease-out;
 }
