--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ img {
     opacity: 1;
     padding: 10px 20px;
     border-radius: 30px; /* Pill shape */
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(0,0,0,0.1));
+    background-color: rgba(255, 255, 255, 0.2); /* Fond très subtil */
     backdrop-filter: blur(5px);
     transition: top 0.3s ease-out, background-color 0.3s ease-out, box-shadow 0.3s ease-out, padding 0.3s ease-out;
 }
@@ -243,16 +243,20 @@ img {
 
 .main-nav ul li a:hover::after,
 .main-nav ul li a.active-nav-link::after {
+    background-color: var(--text-color-light);
     width: 100%;
 }
 
 .main-nav ul li a:hover,
 .main-nav ul li a.active-nav-link {
-    color: var(--accent-color);
+    color: var(--text-color-light);
 }
 .main-nav.fixed-nav ul li a:hover,
 .main-nav.fixed-nav ul li a.active-nav-link {
     color: var(--accent-color);
+}
+.main-nav.fixed-nav ul li a.active-nav-link::after {
+    background-color: var(--accent-color);
 }
 
 .hero-content {
