--- a/style.css
+++ b/style.css
@@ -206,6 +206,8 @@ img {
 .main-nav ul {
     list-style: none;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-nav ul li {
